sass/ui_patterns/_editors.scss
.edit_container {
  position: relative;
  @include grid(6.25, alpha, $grid_context: 6);
  margin-bottom: 1em;
  height: auto;
  border: 1px solid $delta_gray;
  @include border_radius(em(5));
  background: $india_gray;

  /* useful if you don't want a bg color from leaking outside the border: */
     -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
          background-clip: padding-box;

  @media #{$mobile} {
    margin-bottom: em(16);
  }

  .pre_container {
    display:block;
    float:left;
    width:100%;
    position: relative;
    height: em(340);
    overflow-y: scroll;

    @media #{$mobile} {
      height: em(380);
    }
  }

  .edit-header {
    display: block;
    height: em(28);
    font-size: em(16);
    width: 100%;
    text-align: center;
    margin: 0;
    line-height:1.5;
    //font-weight:bold;
    color: $delta_gray;
  }

  pre {
    display:block;
    float:left;
    width:100%;
    font-size: em(14);
    line-height: 1.5em;
    outline: none;
    color: #F1F2F3;
    letter-spacing: 1px;
    height:100%;
  }
}

.edit_container .ace_editor {
  font-family: 'SourceCodePro', monospace;
}

.ace_gutter {
  -webkit-border-bottom-left-radius: em(8); /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
     -moz-border-bottom-left-radius: em(8); /* FF1-3.6 */
          border-bottom-left-radius: em(8); /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */

  /* useful if you don't want a bg color from leaking outside the border: */
     -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
          background-clip: padding-box;

  border-top: 1px solid $delta_gray;
}

.ace_scroller {
  -webkit-border-bottom-right-radius: em(8); /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
     -moz-border-bottom-right-radius: em(8); /* FF1-3.6 */
          border-bottom-right-radius: em(8); /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */

  /* useful if you don't want a bg color from leaking outside the border: */
     -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
          background-clip: padding-box;

  border-top: 1px solid $delta_gray;
}


// /* THIS THEME WAS AUTOGENERATED BY Theme.tmpl.css (UUID: 95F04A13-542C-46AC-A85F-8E7C51811496) */
//
//
// .ace-prettify .ace_gutter {
//   background: #e8e8e8;
//   color: #333;
//   padding: 0.5em 0 0.5em 0.5em;
// }
//
// .ace-prettify .ace_print-margin {
//   width: 1px;
//   background: #e8e8e8;
// }
//
// .ace-prettify .ace_scroller {
//   background-color: #3F3F3F;
//   padding:0.5em;
// }
//
// .ace-prettify .ace_text-layer {
//   color: #F8F8F8;
// }
//
// .ace-prettify .ace_cursor {
//   border-left: 2px solid #A7A7A7;
// }
//
// .ace-prettify .ace_cursor.ace_overwrite {
//   border-left: 0px;
//   border-bottom: 1px solid #A7A7A7;
// }
//
// .ace-prettify .ace_marker-layer .ace_selection {
//   background: rgba(221, 240, 255, 0.20);
// }
//
// .ace-prettify.ace_multiselect .ace_selection.ace_start {
//   box-shadow: 0 0 3px 0px #3F3F3F;
//   border-radius: 2px;
// }
//
// .ace-prettify .ace_marker-layer .ace_step {
//   background: rgb(198, 219, 174);
// }
//
// .ace-prettify .ace_marker-layer .ace_bracket {
//   margin: -1px 0 0 -1px;
//   border: 1px solid rgba(202, 226, 251, 0.24);
// }
//
// .ace-prettify .ace_marker-layer .ace_active-line {
//   background: rgba(255, 255, 255, 0.10);
// }
//
// .ace-prettify .ace_gutter-active-line {
//   background-color: rgba(255, 255, 255, 0.10);
// }
//
// .ace-prettify .ace_marker-layer .ace_selected-word {
//   border: 1px solid rgba(221, 240, 255, 0.20);
// }
//
// .ace-prettify .ace_fold {
//     background-color: #678CB1;
//     border-color: #F8F8F8;
// }
//
//
// .ace-prettify .ace_keyword {
//   color: #678CB1;
// }
// .ace-prettify .ace_constant {
//   color: #9763C7;
// }
// .ace-prettify
// .ace_support {
//   color: #F1F2F3;
// }
// .ace-prettify .ace_support.ace_function {
//   color: #DAD085;
// }
// .ace-prettify .ace_support.ace_constant {
//   color: #678CB1;
// }
// .ace-prettify .ace_storage {
//   color: #EC7600;
// }
// .ace-prettify .ace_invalid.ace_illegal {
//   color: #F1F2F3;
//   background-color: rgba(255, 255, 255, 0.0);
// }
// .ace-prettify .ace_invalid.ace_deprecated {
//   text-decoration: underline;
//   font-style: italic;
//   color: #FD5FF1;
// }
// .ace-prettify .ace_string {
//   color: #EC7600;
// }
// .ace-prettify .ace_string.ace_regexp {
//   color: #FFFFFF;
// }
// .ace-prettify .ace_comment {
//   color: #93C763;
// }
// .ace-prettify .ace_variable {
//   color: #678CB1;
// }
// .ace-prettify .ace_meta.ace_tag {
//   color: #89BDFF;
// }
// .ace-prettify .ace_markup.ace_heading {
//   color: #FEDCC5;
//   background-color: #632D04;
// }
// .ace-prettify .ace_markup.ace_list {
//   color: #E1D4B9;
// }

